--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ cc = "1.2.41"
 tempfile = "3.23.0"
 
 clap = { version = "4.5.47", features = ["derive"] }
+once_cell = "1.21.3"
 
 [features]
 debug = []
