--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tempfile = "3.23.0"
 
 clap = { version = "4.5.47", features = ["derive"] }
 once_cell = "1.21.3"
+indexmap = "2.13.0"
 
 [features]
 debug = []
